# NZM-auto

./: .gitignore  README.md  pyproject.toml
assets/resource/pipeline/: framework.json
config/: default.json  workflow.example.json  workflow.v2.example.json
docs/: PROJECT_STATUS.md
src/nzm_auto/: __init__.py  __main__.py  cli.py
src/nzm_auto/application/: __init__.py  input_profiles.py  session.py  window_service.py
src/nzm_auto/automation/: __init__.py  template_action.py  workflow.py
src/nzm_auto/config/: loader.py
src/nzm_auto/diagnostics/: __init__.py  input_test.py  screenshot.py  template_match.py  workspace.py
src/nzm_auto/gui/: __init__.py  app.py  document.py  main_window.py  property_editor.py  theme.py  window_dialog.py  worker.py
src/nzm_auto/runtime/: __init__.py  maa_runtime.py  task_runtime.py  win32_controller.py
src/nzm_auto/windowing/: __init__.py  discovery.py  selector.py
src/nzm_auto/workflow/: __init__.py  actions.py  context.py  engine.py  events.py  loader.py  model.py  virtual_keys.py
tests/: __init__.py  test_application_services.py  test_config.py  test_debug_workspace.py  test_gui_document.py  test_gui_smoke.py  test_input_test.py  test_screenshot.py  test_task_runtime.py  test_template_action.py  test_template_match.py  test_win32_controller.py  test_window_discovery.py  test_workflow.py  test_workflow_v2.py
